<resources>
    <string name="app_name">Maitree</string>
    <string name="action_settings">Settings</string>
    <string name="pick_up">Pickup Points:</string>
    <string name="meet_point">Meeting Points:</string>
    <string name="sample_address">Inside Gujarat Vidhyapith,Ashram Road,Ahmedabad</string>
    <string name="sample_time">10:00 AM</string>
    <string name="sample_name">Gujarat Vidhyapith</string>
    <string name="place">Places to be visited</string>
    <string name="title_activity_place_detail">PlaceDetail</string>
    <string name="sample_base_desc">Alliance Francaise Ahmedabad (AFA) is an Indian association that aims at developing bonds between France and India by promoting French Language, Culture, Science and Technology exchanges. It had been established in 1981 by a group of local eminent personalities; among them Ms. Mrinalini Sarabhai, Mr. B. V. Doshi and Mrs. Devi Mangaldas just to mention few of them. Since then, AFA has gained recognition from the French Embassy in India, which supports its activities, from the Alliance Francaise network in India and from the Foundation Alliance Francaise in Paris.</string>
    <string name="sample_extra_desc">Their objectives are to reinforce the already robust European-Indian collaborations in all domains of expertise and to present a dynamic, innovative and modern image of France so as to tender it an attractive destination to work with. The Alliance Francaise is in its essence a local organisation endeavouring to participate actively in the dynamics and the development of Gujarat. They would like to give their new building the image of being the meeting place for debating ideas in all domains, facilitating the understanding and exchange between the Indian and the French/European cultures.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="maitreedesc"><b>Maitree means Friendship.</b>\n\nIt was in 1993, when Mr Virendra and Deepika Rathod started this activity in Ahmedabad and welcomed a group of 5 members from France. Maitree has come a long way since then.\n\nOur friendship with the French goes beyond political and geographical boundaries. We come from different cultural and social backgrounds, but our fondness for each other, our love for crafts, culture and cuisine is same.\n\nMaitreeis about universal love and camaraderie. Your visit begins a new chapter in our life. When you leave, you shall leave behind and take with you - memories of the time shared with friends whom you met for the first time, and probably shall never meet again. But the time we spent together shall live with us, forever.\n\nMay the spirit of love, friendship and Maitreeflow endlessly.</string>

    <string-array name="DrawerItems">
        <item>Home</item>
        <item>Suggested Places</item>
        <item>Suggested Dishes</item>
        <item>Maps</item>
        <item>About Host</item>
        <item>About Maitree</item>
        <item>About Developer</item>
        <item>Contact Details</item>
        <item>Full Schedule</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="address">Address:-</string>
    <string name="contact">Contact No :-</string>
    <string name="sample_contact">+91-9737669480</string>
    <string name="aboutthem">About Them:-</string>
    <string name="hostname">Host Name:-</string>

</resources>
